# matchinglib_poselib_ros

./: README.md  build.sh
ait_common/: CMakeLists.txt  package.xml
ait_common/include/ait_common/: InitSubscriber.hpp  Node.hpp
ait_common/src/: Node.cpp
ait_common/test/: test.cpp
matchinglib_poselib_ros/: CMakeLists.txt  README.md  README.txt  package.xml
matchinglib_poselib_ros/cfg/: dyn_config.cfg
matchinglib_poselib_ros/include/ROSnode/: BufferData.hpp  ROSdynamic.hpp  ROSnode.hpp
matchinglib_poselib_ros/launch/: default.launch  default_config.yaml
matchinglib_poselib_ros/src/: BufferData.cpp  ROSnode.cpp  main.cpp
matchinglib_poselib_ros/test/: test.cpp
